terraform_pre-prod/k8s/test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-pod
spec:
  containers:
  - name: hello-container
    image: nginx
    ports:
    - containerPort: 80
